// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameOverModal Snapshots renders correctly in high score state 1`] = `
<View
  animationType="none"
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(2, 6, 23, 0.85)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#0f172a",
            "borderColor": "#3b82f6",
            "borderRadius": 24,
            "borderWidth": 4,
            "boxShadow": "0 0 20px #3b82f680",
            "elevation": 10,
            "maxWidth": 340,
            "padding": 32,
            "width": "100%",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#ef4444",
            "fontSize": 42,
            "fontStyle": "italic",
            "fontWeight": "900",
            "marginBottom": 24,
            "textShadow": "0 0 10px rgba(239, 68, 68, 0.5)",
          }
        }
      >
        GAME OVER
      </Text>
      <View
        style={
          {
            "backgroundColor": "#020617",
            "borderRadius": 16,
            "flexDirection": "row",
            "justifyContent": "space-around",
            "marginBottom": 32,
            "opacity": 0.8,
            "padding": 16,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#94a3b8",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            SCORE
          </Text>
          <Text
            style={
              {
                "color": "#f8fafc",
                "fontSize": 28,
                "fontWeight": "bold",
              }
            }
          >
            1500
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#94a3b8",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            BEST
          </Text>
          <Text
            style={
              {
                "color": "#f8fafc",
                "fontSize": 28,
                "fontWeight": "bold",
              }
            }
          >
            1500
          </Text>
        </View>
      </View>
      <View
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3b82f6",
            "borderRadius": 16,
            "paddingHorizontal": 48,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#020617",
              "fontSize": 20,
              "fontWeight": "900",
            }
          }
        >
          NEW GAME
        </Text>
      </View>
      <View
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#3b82f6",
              "borderRadius": 16,
              "paddingHorizontal": 48,
              "paddingVertical": 16,
              "width": "100%",
            },
            {
              "backgroundColor": "#10b981",
              "marginTop": 12,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#020617",
              "fontSize": 20,
              "fontWeight": "900",
            }
          }
        >
          UNDO (
          1
          )
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`GameOverModal Snapshots renders correctly in standard state 1`] = `
<View
  animationType="none"
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(2, 6, 23, 0.85)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#0f172a",
            "borderColor": "#3b82f6",
            "borderRadius": 24,
            "borderWidth": 4,
            "boxShadow": "0 0 20px #3b82f680",
            "elevation": 10,
            "maxWidth": 340,
            "padding": 32,
            "width": "100%",
          },
          {
            "opacity": 0,
            "transform": [
              {
                "scale": 0,
              },
            ],
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#ef4444",
            "fontSize": 42,
            "fontStyle": "italic",
            "fontWeight": "900",
            "marginBottom": 24,
            "textShadow": "0 0 10px rgba(239, 68, 68, 0.5)",
          }
        }
      >
        GAME OVER
      </Text>
      <View
        style={
          {
            "backgroundColor": "#020617",
            "borderRadius": 16,
            "flexDirection": "row",
            "justifyContent": "space-around",
            "marginBottom": 32,
            "opacity": 0.8,
            "padding": 16,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#94a3b8",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            SCORE
          </Text>
          <Text
            style={
              {
                "color": "#f8fafc",
                "fontSize": 28,
                "fontWeight": "bold",
              }
            }
          >
            500
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            style={
              {
                "color": "#94a3b8",
                "fontSize": 12,
                "fontWeight": "bold",
                "marginBottom": 4,
              }
            }
          >
            BEST
          </Text>
          <Text
            style={
              {
                "color": "#f8fafc",
                "fontSize": 28,
                "fontWeight": "bold",
              }
            }
          >
            1000
          </Text>
        </View>
      </View>
      <View
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3b82f6",
            "borderRadius": 16,
            "paddingHorizontal": 48,
            "paddingVertical": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#020617",
              "fontSize": 20,
              "fontWeight": "900",
            }
          }
        >
          NEW GAME
        </Text>
      </View>
      <View
        onPress={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "backgroundColor": "#3b82f6",
              "borderRadius": 16,
              "paddingHorizontal": 48,
              "paddingVertical": 16,
              "width": "100%",
            },
            {
              "backgroundColor": "#10b981",
              "marginTop": 12,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#020617",
              "fontSize": 20,
              "fontWeight": "900",
            }
          }
        >
          UNDO (
          1
          )
        </Text>
      </View>
    </View>
  </View>
</View>
`;
